fix: update themes, hovers, and mobile spacing

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,13 +5,16 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-
+  --color-accent: #FF0070;
+  --color-secondary: #DB00FF;
+  --color-text: #F1B2CE;
+  --color-subtitle: #000028;
+  --color-background: #000028;
+  --color-accent-opacity: #FF007066;
+  --bg-image: url(../images/cover-image-dark.png);
+  --border: 1px var(--color-accent) solid;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header__logo {
+  display: block;
 }
